--- a/vignettes/IndicatorDefinition.Rmd
+++ b/vignettes/IndicatorDefinition.Rmd
@@ -4,7 +4,7 @@ author: "Miquel De Cáceres / Núria Aquilué"
 date: "`r Sys.Date()`"
 output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Indicator Definition}
+  %\VignetteIndexEntry{Indicator definition}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
