--- a/README.Rmd
+++ b/README.Rmd
@@ -17,11 +17,53 @@ knitr::opts_chunk$set(fig.path = "man/figures/")
 
 Package **forestindicators** is meant to assist the estimation of indicators (metrics) for forest stands, either derived from forest inventory data or forest model simulations. Most often, those indicators will estimate the provision of forest ecosystem services, but the package can be understood more generally as a platform to estimate forest metrics.
 
-## Package installation
+## Installation
 
 Package **forestindicators** can be installed from GitHub using:
 ```{r installation github forestindicators, eval = FALSE}
 remotes::install_github("emf-creaf/forestindicators")
+```
+
+## Examples
+
+### Step 1: Choose target indicators and examine their requirements
+
+The first step is to decide which indicators are to be estimated. You can examine the names of the indicators in the package that could be estimated with your data by calling function `available_indicators()`:
+
+```{r}
+library(forestindicators)
+available_indicators(plant_dynamic_input = example_plant_dynamic_input)
+```
+
+We may need to check which data inputs are required, their units, etc. for a particular indicator. We can find this information using function `show_information()`, for example:
+
+```{r}
+show_information("live_tree_basal_area")
+```
+
+
+### Step 2: Assemble inputs and define values for additional parameters
+
+Once the requested format and content of inputs is know, it is the responsibility of the user to build the necessary data frames to be used as inputs. We will normally need to define additional parameters to fine-tune the estimation of indicators, For that, we define a **named list** where each element corresponds to a different indicator and, in turn, contains a named list of parameters:
+
+```{r}
+params <- list(live_tree_basal_area = list(min_dbh = 8),
+               live_tree_density = list(min_dbh = 8))
+```
+
+### Step 3: Call general estimation function
+
+Once we have our inputs ready, the indicators are estimated by calling function `estimate_indicators()` as follows:
+
+```{r}
+res <- estimate_indicators(indicators = c("live_tree_basal_area", "live_tree_density"),
+                           plant_dynamic_input = example_plant_dynamic_input,
+                           additional_params = params)
+```
+
+The result of the estimation is the following:
+```{r}
+res
 ```
 
 ## Documentation and training
