--- a/vignettes/IndicatorEstimation.Rmd
+++ b/vignettes/IndicatorEstimation.Rmd
@@ -152,4 +152,55 @@ The result of the estimation is the following:
 res
 ```
 
+## Example with data from forestables
+
+```{r}
+library(forestables)
+ifn_output_example
+```
+
+```{r}
+ifn4_example <- ifn_output_example|>
+  dplyr::filter(version == "ifn4")
+```
+
+```{r}
+x <- ifn4_example |>
+  dplyr::select(id_unique_code, year, province_code, tree) |>
+  tidyr::unnest(cols = tree) |>
+  dplyr::select("id_unique_code", "year", "province_code", "sp_name", "density_factor", "dbh", "height", "tree_ifn4") |>
+  dplyr::mutate(province_code = as.numeric(province_code)) |>
+  dplyr::mutate(year = as.Date(paste0(year, "-01-01"))) |>
+  dplyr::rename(id_stand = id_unique_code, 
+                province = province_code,
+                date = year,
+                n = density_factor, 
+                h = height, 
+                plant_entity = sp_name) |>
+  dplyr::mutate(state = "live") |>
+  dplyr::filter(!is.na(n)) |>
+  dplyr::select(-tree_ifn4)
+```
+
+
+```{r}
+summary(x)
+```
+
+```{r}
+available_indicators(plant_dynamic_input = x)
+```
+
+```{r}
+estimate_indicators(c("live_tree_density", 
+                      "live_tree_basal_area",
+                      "mean_tree_height",
+                      "dominant_tree_height", 
+                      "dominant_tree_diameter",
+                      "quadratic_mean_tree_diameter",
+                      "hart_becking_index"), 
+                    plant_dynamic_input = x, 
+                    verbose = FALSE)
+```
+
 
