--- a/README.Rmd
+++ b/README.Rmd
@@ -70,7 +70,10 @@ res
 
 ## Documentation and training
 
-Two *vignettes* are included [here](https://emf-creaf.github.io/forestindicators/articles/) illustrate: (1) how to use the R package to estimate indicators; and (2) how to define new indicators.
+Two *vignettes* are included [here](https://emf-creaf.github.io/forestindicators/articles/) illustrate: 
+
+ 1. How to use the R package to estimate indicators
+ 2. How to define new indicators.
 
 ## Volume/biomass allometric functions
 
