timber harvest carbon rate

--- a/vignettes/IndicatorEstimation.Rmd
+++ b/vignettes/IndicatorEstimation.Rmd
@@ -217,9 +217,10 @@ x_ifn3_filt <- x_ifn3 |>
 x_ifn23 <- dplyr::bind_rows(x_ifn2_filt, x_ifn3_filt)
 ```
 
-Finally, we can use `estimate_indicators()` to estimate carbon stocks in IFN2 and IFN3, as well as the rate of change:
+Finally, we can use `estimate_indicators()` to estimate carbon stocks in IFN2 and IFN3, as well as the rates of biomass change due to changes in living stock:
 ```{r}
-estimate_indicators(c("live_tree_carbon_stock","live_tree_carbon_change_rate"), 
+estimate_indicators(c("live_tree_carbon_stock",
+                      "live_tree_carbon_change_rate"), 
                     plant_dynamic_input = x_ifn23, 
                     plant_biomass_function = IFNallometry::IFNbiomass_forestindicators,
                     include_units = TRUE)
